added <th> for MARK READY and REMOVE

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -33,9 +33,12 @@
             <th>Gender</th>
             <th>Ready for Transfer</th>
             <th>Notes</th>
+            <th>Mark Ready</th>
+            <th>Remove</th>
           </tr>
         </thead>
         <tbody id="viewKoalas">
+          
         </tbody>
       </table>
     </section>
