updated code so ready for transfer button appends only when ready is true

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -19,7 +19,7 @@
   <section id="addKoala">
     <h2>Add Koala</h2>
     <input type="text" id="nameIn" value="" placeholder="Name">
-    <input type="text" id="ageIn" value="" placeholder="Age">
+    <input type="number" id="ageIn" value="" placeholder="Age">
     <label for="genderIn"></label>
     <select name="genderIn" id="genderIn">
       <option value="">Gender</option>
@@ -42,6 +42,7 @@
     <table>
       <thead>
         <tr>
+          <th>ID</th>
           <th>Name</th>
           <th>Age</th>
           <th>Gender</th>
